--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
   "dependencies": {
     "all": "^0.0.0",
     "bcrypt": "^5.1.0",
-    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20",
-    "uuid": "^9.0.0"
+    "nodemon": "^2.0.20"
   }
 }
